# GameFrame

./: Cargo.toml  LICENSE  README.md  build.hacker  build.hl
source-code/: Cargo.toml  config.h  idle_inhibit_v1.c  idle_inhibit_v1.h  main.c  meson.build  output.c  output.h  seat.c  seat.h  server.h  view.c  view.h  xdg_shell.c  xdg_shell.h  xwayland.c  xwayland.h
source-code/cli/: Cargo.toml
source-code/cli/src/: main.rs
source-code/core/: Cargo.toml
source-code/core/src/: compositor.rs  config.rs  cursor.rs  dmabuf.rs  frame.rs  input_handler.rs  lib.rs  output.rs  render.rs  session.rs  state.rs  telemetry.rs  window.rs  xwayland.rs
source-code/gpu/: Cargo.toml
source-code/gpu/src/: detect.rs  lib.rs
source-code/gpu/src/amd/: mod.rs
source-code/gpu/src/intel/: mod.rs
source-code/gpu/src/nvidia/: mod.rs
source-code/input/: Cargo.toml
source-code/input/src/: lib.rs
source-code/overlay/: Cargo.toml
source-code/overlay/src/: lib.rs
source-code/src/: main.rs
