[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "gpu",
    "input",
    "overlay",
]

[workspace.package]
version       = "0.4.0"
edition       = "2021"
license       = "Apache-2.0"
authors       = ["Gameframe Contributors"]
repository    = "https://github.com/gameframe-project/gameframe"
rust-version  = "1.80"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
calloop     = { version = "0.14", features = ["executor"] }
async-trait = "0.1"

clap = { version = "4", features = ["derive", "env", "color"] }

# Smithay 0.7 – renderer_gl (not renderer_gles)
smithay = { version = "0.7", default-features = false, features = [
    "backend_drm", "backend_gbm", "backend_egl",
    "backend_udev", "backend_libinput",
    "backend_session", "backend_session_libseat",
    "desktop", "renderer_gl", "renderer_pixman", "renderer_multi",
    "wayland_frontend", "xwayland", "x11rb_event_source", "use_system_lib",
] }

drm        = "0.14"
drm-fourcc = "2"
gbm        = { version = "0.18", features = ["drm-support"] }
nix        = { version = "0.29", features = ["fs", "ioctl", "ucontext", "event"] }

tiny-skia = "0.11"
image     = { version = "0.25", default-features = false, features = ["png"] }

xkbcommon = { version = "0.7", features = ["wayland"] }
input     = { version = "0.9", default-features = false, features = ["libinput_1_19"] }

tracing            = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
directories = "5"

anyhow    = "1"
thiserror = "1"

uuid     = { version = "1", features = ["v4"] }
bitflags = "2"
libc     = "0.2"
# rustix used via smithay::reexports::rustix to avoid version conflict
