[package]
name = "gameframe"
version = "0.2.0"
edition = "2021"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = ["backend_drm", "backend_libinput", "backend_udev", "backend_session", "renderer_glow", "desktop", "xwayland", "wayland_frontend"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xkbcommon = "0.7"
udev = "0.8"
input = "0.8"
drm = "0.11"
gbm = "0.14"
egl = "0.2"
glow = "0.13"
x11rb = "0.12"
glam = "0.24"
libloading = "0.8"
libseat = "0.2"
rustix = { version = "0.38", features = ["fs"] }
