[package]
name    = "gameframe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gameframe"
path = "src/main.rs"

[dependencies]
gameframe-core = { path = "../core" }
gameframe-gpu  = { path = "../gpu" }
clap              = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow            = { workspace = true }
serde             = { workspace = true }
toml              = { workspace = true }
directories       = { workspace = true }
