[package]
name    = "gameframe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gameframe-gpu     = { path = "../gpu" }
gameframe-input   = { path = "../input" }
gameframe-overlay = { path = "../overlay" }

smithay           = { workspace = true }

calloop           = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true }
toml              = { workspace = true }
libc              = { workspace = true }
drm               = { workspace = true }
drm-fourcc        = { workspace = true }
gbm               = { workspace = true }
tiny-skia         = { workspace = true }
